# SparseCraft

./: .qprorc  .qsrc  README.md  pyproject.toml  requirements.txt
CompileConfig/Kokkos/4090/: CMakeLists.txt
CompileConfig/Kokkos/5090/: CMakeLists.txt
CompileConfig/SparseCraft/BLAS/4090/: CMakeLists.txt
ExpCommander/: __config__.py  __init__.py  main.py
OtherPKG/ASpT-SpMM/: compile_GPU_SpMM_ASpT.sh
OtherPKG/CSR5_cuda/: Makefile  csr5_record.csv  main.cu
OtherPKG/cusparse-test/: CMakeLists.txt  main.cu
OtherPKG/kokkos-test/: CMakeLists.txt  main.cpp
SparseCraft/BLAS/: CMakeLists.txt  README.md  main.cu  pyproject.toml
SparseCraft/DataGen/: CMakeLists.txt  generate_distributions.py  main.cu  out.txt  pyproject.toml
SparseCraft/Oaktree/: decision_tree  decision_tree.c
SparseCraft/SlimeNet/: CMakeLists.txt  compare_matrices.py  main.cpp  pyproject.toml  test_only.cpp
SparseCraft/SlimeNet/backup/test/: COO.txt  DCL.txt  DNS.txt  DRW.txt  ELL.txt  HYB.txt
SparseCraft/SlimeNet/backup/test4090/: COO.txt  DCL.txt  DNS.txt  DRW.txt  ELL.txt  HYB.txt
SparseCraft/SlimeNet/data/3090/test/: COO.txt  DCL.txt  DRW.txt
SparseCraft/SlimeNet/data/3090/train/: COO.txt  DCL.txt  DRW.txt  ELL.txt  HYB.txt
SparseCraft/SlimeNet/data/4090/test/: COO.txt  DCL.txt  DRW.txt
SparseCraft/SlimeNet/data/4090/train/: COO.txt  DCL.txt  DRW.txt  ELL.txt  HYB.txt
SparseCraft/SlimeNet/data/5090/test/: COO.txt  DCL.txt  DNS.txt  DRW.txt  HYB.txt
SparseCraft/SlimeNet/data/5090/train/: DCL.txt  DNS.txt  DRW.txt  ELL.txt  HYB.txt
SparseCraft/SlimeNet/include/: cnn.h  data_loader.h  msg.h
SparseCraft/SlimeNet/slimeCommander/: __config__.py  __init__.py  main.py
SparseCraft/SlimeNet/src/: cnn.cpp  data_loader.cpp
mtx-info/: spgemm-info.csv  spmm-info.csv  spmv-info.csv
res/: 3090-spgemm-cusparse-representative.csv  3090-spgemm-cusparse.csv  3090-spgemm-kokkos-representative.csv  3090-spgemm-sparsecraft-representative.csv  3090-spgemm-sparsecraft.csv  3090-spmm-aspt.csv  3090-spmm-kokkos-representative.csv  3090-spmm-sparsecraft.csv  3090-spmv-cusparse.csv  3090-spmv-sparsecraft-representative.csv  3090-spmv-sparsecraft.csv  3090-spmv-tilespmv-representative.csv  3090-spmv-tilespmv.csv  4090-spgemm-cusparse-representative.csv  4090-spgemm-nsparse.csv  4090-spgemm-sparsecraft-representative.csv  4090-spgemm-sparsecraft.csv  4090-spmm-aspt.csv  4090-spmm-cusparse-representative.csv  4090-spmm-kokkos-representative.csv  4090-spmm-sparsecraft-representative.csv  4090-spmv-cusparse-representative.csv  4090-spmv-cusparse.csv  4090-spmv-kokkos-representative.csv  4090-spmv-kokkos.csv  4090-spmv-sparsecraft-representative.csv  5090-spgemm-cusparse-representative.csv  5090-spgemm-kokkos-representative.csv  5090-spgemm-kokkos.csv  5090-spmm-aspt-representative.csv  5090-spmm-aspt.csv  5090-spmm-cusparse-representative.csv  5090-spmm-kokkos-representative.csv  5090-spmm-sparsecraft-representative.csv  5090-spmm-sparsecraft.csv  5090-spmv-csr5-representative.csv  5090-spmv-csr5.csv  5090-spmv-cusparse-representative.csv  5090-spmv-kokkos-representative.csv  5090-spmv-kokkos.csv  (+3 more)
res/ready_to_draw/: 3090-spgemm-kokkos.csv  3090-spgemm-nsparse-representative.csv  3090-spgemm-tilespgemm-representative.csv  3090-spmm-aspt-representative.csv  3090-spmm-cusparse-representative.csv  3090-spmm-kokkos.csv  3090-spmm-sparsecraft-representative.csv  3090-spmv-csr5-representative.csv  3090-spmv-csr5.csv  3090-spmv-cusparse-representative.csv  3090-spmv-kokkos-representative.csv  4090-spgemm-cusparse-representative.csv  4090-spgemm-cusparse.csv  4090-spgemm-nsparse-representative.csv  4090-spgemm-sparsecraft-representative.csv  4090-spgemm-tilespgemm-representative.csv  4090-spgemm-tilespgemm.csv  4090-spmm-aspt-representative.csv  4090-spmm-cusparse-representative.csv  4090-spmm-cusparse.csv  4090-spmm-kokkos-representative.csv  4090-spmm-sparsecraft-representative.csv  4090-spmm-sparsecraft.csv  4090-spmv-csr5-representative.csv  4090-spmv-csr5.csv  4090-spmv-cusparse-representative.csv  4090-spmv-kokkos-representative.csv  4090-spmv-sparsecraft-representative.csv  4090-spmv-sparsecraft.csv  4090-spmv-tilespmv-representative.csv  4090-spmv-tilespmv.csv  5090-spgemm-cusparse.csv  5090-spgemm-nsparse-representative.csv  5090-spgemm-nsparse.csv  5090-spgemm-sparsecraft-representative.csv  5090-spgemm-sparsecraft.csv  5090-spgemm-tilespgemm-representative.csv  5090-spgemm-tilespgemm.csv  5090-spmm-cusparse.csv  5090-spmm-kokkos.csv  (+3 more)
(+193 files in other folders)
